--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         </video>
       </div>
     </section>
-    <footer class="footer">
+<!--     <footer class="footer">
       <p class="footer__copy">&#169; Aditya Yaduvanshi. All rights reserved.</p>
-    </footer>
+    </footer> -->
   </body>
 </html>
